@@ -2,15 +2,15 @@ $:.unshift(File.dirname(__FILE__) + '/../../lib')
 require 'cucumber/rake/task'
 
 Cucumber::Rake::Task.new(:pretty) do |t|
-  t.cucumber_opts = "--format pretty -q"
+  t.cucumber_opts = "--tags ~@intentional_failure --format pretty -q"
 end
 
 Cucumber::Rake::Task.new(:html) do |t|
-  t.cucumber_opts = "--format html --out features.html"
+  t.cucumber_opts = "--tags ~@intentional_failure --format html --out features.html"
 end
 
 Cucumber::Rake::Task.new(:progress) do |t|
-  t.cucumber_opts = "--format progress -i -n"
+  t.cucumber_opts = "--tags ~@intentional_failure --format progress -i -n"
 end
 
 task :default => [:pretty, :html, :progress]
