@@ -2,6 +2,7 @@
 
 === New features
 * New translation for Hungarian (#287 Bence Golda)
+* Pick up failure on after hook (#272 Aslak Hellesøy)
 
 === Bugfixes
 * Exceptions from steps called within hooks are now reraised. (#294 Ben Mabey)
